# ros2-workspace

./: .gitignore
install/: local_setup.sh  setup.sh
install/my_cpp_pkg/lib/my_cpp_pkg/: number_publisher  test_node
install/my_cpp_pkg/share/my_cpp_pkg/: package.dsv  package.sh
install/my_py_pkg/lib/my_py_pkg/: test_node  test_node_first  test_node_second
install/my_py_pkg/share/my_py_pkg/: package.dsv  package.sh  package.xml
install/my_robot_interfaces/include/my_robot_interfaces/my_robot_interfaces/msg/detail/: hardware_status__description.c  hardware_status__traits.hpp
install/my_robot_interfaces/share/my_robot_interfaces/: package.dsv  package.sh
install/my_robot_interfaces/share/my_robot_interfaces/cmake/: export_my_robot_interfaces__rosidl_generator_cppExport.cmake  export_my_robot_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  my_robot_interfacesConfig.cmake  my_robot_interfaces__rosidl_typesupport_cExport.cmake  my_robot_interfaces__rosidl_typesupport_cppExport.cmake  my_robot_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/my_robot_interfaces/share/my_robot_interfaces/msg/: HardwareStatus.idl
log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/log/: latest_list
src/my_cpp_pkg/src/: first_node.cpp  number_counter.cpp  number_publisher.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/log/: latest_list
src/my_py_pkg/my_py_pkg/: first_node.py  number_publisher.py
src/my_robot_interfaces/: CMakeLists.txt
src/my_robot_interfaces/log/: latest_list
src/turtle_controller/: CMakeLists.txt  package.xml
